--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,4 +17,4 @@ jobs:
         with:
           branch: master # The branch the action should deploy to.
           folder: dist # The folder the action should deploy.
-          repository-name: f1-2019-results.github.io
+          repository-name: f1-2019-results/f1-2019-results.github.io
