--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "chart.js": "^2.9.4",
     "core-js": "^3.8.1",
     "vue": "^2.6.12",
+    "vue-chartjs": "^3.5.1",
     "vue-class-component": "^7.2.6",
     "vue-property-decorator": "^9.1.2",
     "vue-router": "^3.4.9",
