--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "chart.js": "^2.9.4",
+    "chartjs-plugin-datalabels": "^1.0.0",
     "core-js": "^3.8.1",
     "vue": "^2.6.12",
     "vue-chartjs": "^3.5.1",
